corrected text-align

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,33 +1,35 @@
 body {
-    background-color: rgb(65, 124, 183);
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(65, 124, 183);
+  color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 
-    nav {
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-    }
+  nav {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
 
-    nav button {
+  nav button {
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    background-color: yellow;
+    border-color: green;
+    border-radius: 0.5em;
+    font-size: 2em;
+    padding: 1rem;
+  }
 
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        background-color: yellow;
-        border-color: green;
-        border-radius: 0.5em;
-        font-size: 2em;
-        padding: 1rem;
+  #content {
 
-    }
+    display: grid;
+    place-content: center;
+    margin: auto;
+    text-align: justify;
+    width: 50%;
+    font-size: 2em;
+  }
 
-    #content {
-        
-        display: grid;
-        place-content: center;
-        margin: auto;
-        text-align: center;
-        width: 50%;
-        font-size: 2em;
-    }
+  #content h1 {
+    text-align:center;
+  }
 
 }
